# stockripperv2

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.mailer  Dockerfile.market-analyst  Dockerfile.planner  FINAL_STATUS.md  HELM_DEPLOYMENT.md  HighLevelSpec.md  LICENSE  LOCAL_DEVELOPMENT.md  MCP_STDIO_INTEGRATION.md  PROJECT_COMPLETION.md  PR_DESCRIPTION.md  README.md  REFACTOR_COMPLETE.md  SECURITY.md  check_agents.py  config.py  debug_agent.py  debug_agent2.py  debug_gmail_direct.py  debug_gmail_mcp_direct.py  debug_gmail_schema.py  debug_gmail_tools.py  debug_market_analyst.py  deploy-k8s.ps1  deploy.ps1  exact_copy_test.py  fresh_financial_agent.py  fresh_stock_agent.py  message_bus.py  minimal_market_analyst.py  pyproject.toml  rendered-templates.yaml  requirements-dev.txt  requirements.txt  run_local.py  run_mailer.py  (+26 more)
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  bicep.instructions.md  csharp.instructions.md  docker.instructions.md  python.instructions.md  security.instructions.md
.github/workflows/: ci.yaml
agents/: base.py
agents/mailer/: Dockerfile  __init__.py  main.py
agents/market_analyst/: Dockerfile  __init__.py  main.py
agents/planner/: Dockerfile  __init__.py  main.py
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: README.txt  _helpers.tpl  alpaca-mcp-deployment.yaml  alpaca-mcp-service.yaml  gmail-mcp-deployment.yaml  gmail-mcp-service.yaml  mailer-deployment.yaml  mailer-ingress.yaml  mailer-service.yaml  market-analyst-deployment.yaml  namespace.yaml  (+6 more)
tests/: conftest.py
(+5 files in other folders)
