[project]
name = "stockripperv2"
version = "0.1.0"
description = "MVP multi-agent trading assistant"
authors = [{name = "Randy Treit"}]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
